--- a/dice game/index.html
+++ b/dice game/index.html
@@ -20,12 +20,12 @@
         <h1 class="heading">Refresh me</h1>
 
         <div class="dice">
-            <p>player 1</p>
+            <p>aryan 1</p>
             <img class="img1" src="images/dice6.png" alt="dice-1-img">
         </div>
 
         <div class="dice">
-            <p>player 2</p>
+            <p>aryan 2</p>
             <img class="img2" src="images/dice6.png" alt="dice-2-img">
         </div>
 
